
V1.0.2
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
Bug Fixes
• Fixed Bleached Dust crash with Jade Installed
• Fixed Pick blocking bleached chalk dust crash
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------














V1.0.1
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
Bug Fixes
• Fixed Dyed Flower Pot Recipes (You can now craft dyed flower pots with a normal flower pot)
• Fixed Smooth Cork Recipes (You can now craft smooth cork)
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
Sounds
• Added Custom Soapstone Sounds
• Added Custom Cork Wood Set Sounds



V1.0.0
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
Items
• Added Chalk Sticks (16 dye colours + bleached)
• Added Paint Brushes (16 dye colours + bleachdew)
• Added 33 Chalk Patterns (The chalk stick can draw chalk patterns)
• Added Pottery Sherd Item for blank pottery pattern
• Added Finale Pottery Sherd
• Added Gateway Pottery Sherd
• Added Roll Pottery Sherd
• Added Ruined Pottery Sherd
• Added Lotus Pistils (can be placed on Lily Pads and you get them from the Sniffer)